--- a/flyboard/templates/board/test.html
+++ b/flyboard/templates/board/test.html
@@ -44,7 +44,7 @@
                     </div>
                     <div id="new-thread-creator" class="hidden">
                         <form>
-                            <table id="form-table">
+                            <table class="form-table">
                                 <tr>
                                     <th>Name</th>
                                     <td><input type="text" id="name-input"/></td>
