--- a/flyboard/static/css/flytheme.css
+++ b/flyboard/static/css/flytheme.css
@@ -20,6 +20,10 @@ a {
     color: darkblue;
 }
 
+a.bleak {
+    color: rgb(105, 105, 131);
+}
+
 a:hover {
     color: red;
 }
@@ -116,36 +120,31 @@ center {
     font-size: 10px;
 }
 
-#form-table {
+.form-table {
     margin: 0 auto;
     padding: 0;
     font-size: 12px;
     border-spacing: 1px;
 }
 
-#form-table, #popular-threads-table th {
+.form-table th, #popular-threads-table th, .table th {
     width: 70px;
     background-color: rgb(109, 136, 255);
     color: darkblue;
     text-align: left;
     vertical-align: middle;
-    padding: 0 5px;
+    padding: 5px;
     height: auto;
 }
 
-#popular-threads-table th {
+#popular-threads-table th, .table th {
     border-bottom: 1px solid black;
 }
 
-#popular-threads-table {
+#popular-threads-table, .table {
     border: 1px solid black;
     min-height: 200px;
     text-align: center;
-}
-
-#popular-threads-table thead {
-    padding: 0;
-    margin: 0;
 }
 
 #popular-threads-table th {
@@ -155,24 +154,22 @@ center {
     margin: 0;
 }
 
-#popular-threads-table tbody {
-    display: table-row-grouptablblock;
+#popular-threads-table tbody, .table tbody {
     background-color: snow;
     border: 1px solid black;
     border-collapse: separate;
-    margin-top: -3px;
 }
 
 #popular-threads-table td {
     padding: 0;
 }
 
-#form-table td {
+.form-table td {
     padding: 0;
     text-align: left;
 }
 
-#form-table td textarea {
+.form-table td textarea {
     padding: 0;
     box-sizing: border-box;
     width: 100%;
@@ -280,7 +277,7 @@ blockquote {
     margin-right: 30px;
 }
 
-.post-reply, #page-list {
+.post-reply, #page-list, .panel {
     background-color: #d6daf0;
     border: 1px solid #b7c5d9;
     border-left: none;
@@ -289,6 +286,29 @@ blockquote {
     margin-bottom: 5px;
     max-width: 99%;
     max-width: calc(100% - 2.17em);
+}
+
+.panel {
+    min-height: 50px;
+    min-width: 50px;
+    padding: 10px;
+    clear: both;
+    position: relative;
+}
+
+.panel-title {
+    text-align: center;
+    font-weight: bold;
+}
+
+.panel-floating-center {
+    left: 0;
+    right: 0;
+    top: 40%;
+    margin: auto;
+    text-align: center;
+    width: fit-content;
+    position: absolute;
 }
 
 .reply-arrows {
@@ -338,9 +358,31 @@ blockquote {
 */
 
 #popular-threads-table {
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
     margin: auto;
+}
+
+#login-form-table {
+    position: fixed;
+    left: 50%;
+    top: 40%;
+    text-align: center;
+    width: 300px;
+    margin-left: -150px;
+}
+
+.cloak {
+    background: rgba(0, 0, 0, 0.8);
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.table th {
+    text-align: center;
+}
+
+.panel-title {
+    margin-bottom: 10px;
 }
