--- a/flyboard/templates/bar_content.html
+++ b/flyboard/templates/bar_content.html
@@ -12,14 +12,19 @@
 </span>
 <span class="settings-side">
     <a href="#" class="glyphicon glyphicon-eye-open thread-watcher-button" onclick="return false;" title="{{ g.messages['thread_watcher'] }}"></a>
-    <a href="#" class="glyphicon glyphicon-search search-button" onclick="return false;" title="{{ g.messages['search'] }}"></a>
-    <a href="#" class="glyphicon glyphicon-cog settings-button" onclick="return false;" title="{{ g.messages['settings'] }}"></a>
-    {% if g.user.is_authenticated %}
-        <a href="#" class="glyphicon glyphicon-off logout-button" onclick="return false;" title="{{ g.messages['log_out'] }}"></a>
-        <a href="#" class="glyphicon glyphicon-wrench mod-panel-button" onclick="return false;" title="{{ g.messages['mod_panel'] }}"></a>
-    {% endif %}
     {% if not g.user.is_authenticated %}
         <a href="#" class="glyphicon glyphicon-user login-button" onclick="return false;" title="{{ g.messages['log_in'] }}"></a>
     {% endif %}
+    {% if g.user.is_authenticated %}
+        <a href="#" class="glyphicon glyphicon-off logout-button" onclick="return false;" title="{{ g.messages['log_out'] }}"></a>
+        {% if g.user.has_permission('flyboard.admin.panel_access') %}
+            <a href="#" class="glyphicon glyphicon-wrench admin-panel-button" onclick="return false;" title="{{ g.messages['admin_panel'] }}"></a>
+        {% endif %}
+        {% if g.user.has_permission('flyboard.mod.panel_access') %}
+            <a href="#" class="glyphicon glyphicon-wrench mod-panel-button" onclick="return false;" title="{{ g.messages['mod_panel'] }}"></a>
+        {% endif %}
+    {% endif %}
+    <a href="#" class="glyphicon glyphicon-search search-button" onclick="return false;" title="{{ g.messages['search'] }}"></a>
+    <a href="#" class="glyphicon glyphicon-cog settings-button" onclick="return false;" title="{{ g.messages['settings'] }}"></a>
     <a href="{{ url_for('home') }}" id="home-button" class="glyphicon glyphicon-home" title="{{ g.messages['home'] }}"></a>
 </span>
