--- a/flyboard/templates/_layout.html
+++ b/flyboard/templates/_layout.html
@@ -24,7 +24,7 @@
         </div>
         <div class="cloak" style="display: none;">
             <div class="panel panel-floating-center">
-                <div class="panel-title">{{ g.messages['log_in'] }}</div>
+                <div class="panel-title">{{ g.messages['log_in'] }}<div class="panel-exit-button"><a href="#" onclick="return false;" class="glyphicon glyphicon-remove"></a></div></div>
                 <div class="panel-content">
                     <form>
                         <table class="form-table">
