--- a/flyboard/templates/home.html
+++ b/flyboard/templates/home.html
@@ -1,10 +1,9 @@
 {% extends "_layout.html" %}
 {% block title %}{{ g.messages['home'] }}{% endblock %}
 {% block header %}{{ g.messages['home'] }}{% endblock %}
-{% block announcement %}
-{% endblock %}
 {% block content %}
-<table id="popular-threads-table" cellspacing="0">
+<div id="info-box">
+<table id="popular-threads-table" class="big-info-table" cellspacing="0">
     <thead>
         <tr>
             <th colspan="4">{{ g.messages['popular_threads'] }}</th>
@@ -16,4 +15,19 @@
         </tr>
     </tbody>
 </table>
+<table id="stats-table" class="big-info-table" cellspacing="0">
+    <thead>
+        <tr>
+            <th colspan="3">{{ g.messages['stats'] }}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><b>{{ g.messages['users_online'] }}:</b> {{g.sessions_online}}</td>
+            <td><b>{{ g.messages['posts_within_a_minute'] }}:</b> </td>
+            <td><b>Users online:</b> {{g.sessions_online}}</td>
+        </tr>
+    </tbody>
+</table>
+</div>
 {% endblock %}
