--- a/flyboard/templates/home.html
+++ b/flyboard/templates/home.html
@@ -23,9 +23,9 @@
     </thead>
     <tbody>
         <tr>
+            <td><b>{{ g.messages['total_posts'] }}:</b> </td>
             <td><b>{{ g.messages['users_online'] }}:</b> {{g.sessions_online}}</td>
-            <td><b>{{ g.messages['posts_within_a_minute'] }}:</b> </td>
-            <td><b>Users online:</b> {{g.sessions_online}}</td>
+            <td><b>{{ g.messages['unique_posters'] }}:</b> </td>
         </tr>
     </tbody>
 </table>
