--- a/flyboard/templates/_layout.html
+++ b/flyboard/templates/_layout.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div id="topbar">
-            {% include 'bar_content.html' %}
+            {% include '__bar_content.html' %}
         </div>
         <div class="cloak" style="display: none;">
             <div class="panel panel-floating-center">
@@ -62,7 +62,7 @@
         </div>
         <hr>
         <div id="bottombar">
-            {% include 'bar_content.html' %}
+            {% include '__bar_content.html' %}
         </div>
         <hr>
         <div id="footer">
