--- a/flyboard/static/css/flytheme.css
+++ b/flyboard/static/css/flytheme.css
@@ -132,9 +132,10 @@ center {
     width: 70px;
     background-color: rgb(109, 136, 255);
     color: darkblue;
+    border: 1px solid darkblue;
     text-align: left;
     vertical-align: middle;
-    padding: 5px;
+    padding: 2px;
     height: auto;
 }
 
@@ -199,7 +200,7 @@ center {
     text-align: left;
     margin-top: 10px;
     font-size: 10px;
-    width: 250px;
+    width: 300px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -284,6 +285,7 @@ blockquote {
     margin: auto;
     text-align: center;
     width: fit-content;
+    width: -moz-fit-content;
     position: absolute;
 }
 
@@ -400,6 +402,14 @@ blockquote {
     box-shadow: 0 0 0 1px gray;
 }
 
+.info-table {
+    text-align: left;
+    width: 100%;
+    min-width: 400px;
+    margin-bottom: 40px;
+    box-shadow: 0 0 0 1px gray;
+}
+
 .big-info-table th {
     text-align: left;
     font-style: italic;
@@ -425,4 +435,8 @@ blockquote {
 
 .disabled {
     opacity: .45;
+}
+
+#popular-threads-table td {
+    height: 200px;
 }
